ADD: person support

--- a/src/product/app/templates/index.html
+++ b/src/product/app/templates/index.html
@@ -6,7 +6,7 @@
     <script src="../static/js/vendor/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-    <textarea id="userDoc"></textarea>
+    <textarea rows="50" cols="50" id="userDoc"></textarea>
     <button id="startButton" onclick="sendDoc()">Send</button>
     <div id="docId"></div>
     <script src="../static/js/app.js"></script>
