--- a/src/product/app/templates/results.html
+++ b/src/product/app/templates/results.html
@@ -1,14 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>text enrichment #results</title>
+    <link rel="stylesheet" href="../static/css/foundation.min.css">
+    <link rel="stylesheet" href="../static/css/app.css">
+    <link rel="stylesheet" href="../static/css/results.css">
     <script src="../static/js/vendor/jquery-3.3.1.min.js"></script>
 </head>
+
 <body>
-    <text id="doc"></text>
-    <button onclick="/">Edit</button>
+
+    <div id="results-container">
+        <div class="grid-y medium-grid-frame">
+            <div class="cell shrink header medium-cell-block-container large-2 medium-2 small-2">
+                <div class="grid-x grid-padding-x">
+                    <div class="cell large-1 medium-1 small-1 medium-cell-block-y"></div>
+                    <div class="cell large-11 medium-11 small-11 medium-cell-block-y">
+                        <h1 class="text-left">results - text enrichment</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="cell medium-auto medium-cell-block-container large-8 medium-8 small-8 main">
+                <div class="grid-x grid-padding-x">
+                    <div class="cell large-1 medium-1 small-1 medium-cell-block-y"></div>
+                    <div class="container cell large-6 medium-10 small-10 medium-cell-block-y">
+                        <div class="large" id="doc"></div>
+                    </div>
+                    <div class="cell large-1 medium-1 small-1 medium-cell-block-y"></div>
+                </div>
+            </div>
+            <div class="cell medium-auto medium-cell-block-container large-2 main">
+                    <div class="grid-x grid-padding-x">
+                        <div class="cell large-8 medium-1 medium-cell-block-y"></div>
+                        <div class="cell large-4 medium-cell-block-y">
+                            <button type="button" class="success button" id="summaryButton" onclick="showSummary()">Summary</button>
+                            <button type="button" class="warning button" id="backButton" onclick="goBack()">New document</button>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
+
+    <div class="hide" id="summary-container">
+        <div class="grid-y medium-grid-frame">
+            <div class="cell shrink header medium-cell-block-container large-2 medium-2 small-2">
+                <div class="grid-x grid-padding-x">
+                    <div class="cell medium-1 large-1 medium-cell-block-y"></div>
+                    <div class="cell medium-11 large-11 medium-cell-block-y">
+                        <h1 class="text-left">summary - text enrichment</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="cell medium-auto medium-cell-block-container large-8 medium-8 small-8 main main">
+                <div class="grid-x grid-padding-x">
+                    <div class="cell medium-1 large-1 small-1medium-cell-block-y"></div>
+                    <div class="container cell medium-10 large-6 small-10 medium-cell-block-y">
+                        <div class="large" id="sum"></div>
+                    </div>
+                    <div class="cell medium-1 large-1 medium-cell-block-y"></div>
+                </div>
+            </div>
+            <div class="cell medium-auto medium-cell-block-container large-2 main">
+                <div class="grid-x grid-padding-x">
+                    <div class="cell large-8 medium-1 medium-cell-block-y"></div>
+                    <div class="cell large-4 medium-cell-block-y">
+                        <button type="button" class="success button" id="summaryButton" onclick="showResults()">Results</button>
+                        <button type="button" class="warning button" id="backButton" onclick="goBack()">New document</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="loader">
+            <div class="grid-y medium-grid-frame">
+                <div class="cell small-4 medium-4 large-4"></div>
+                <div class="cell small-8 medium-8 large-8">
+                    <div class="grid-x grid-padding-x align-center-middle">
+                        Processing...
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     <script src="../static/js/results.js"></script>
 </body>
-</html>
 
+</html>
