FIX: nameing fix

--- a/src/product/app/templates/index.html
+++ b/src/product/app/templates/index.html
@@ -26,7 +26,7 @@
                 <textarea class="large" placeholder="Type or paste text" id="userDoc"></textarea>
             </div>
             <div class="container cell large-4 medium-cell-block-y">
-                <h2>Named entities</h2>
+                <h2>named entities</h2>
 
                 {% for entity in supported_entities %}
                 <div class="grid-x grid-padding-x">
